сделал кнопки открытия попапов

--- a/confirm.html
+++ b/confirm.html
@@ -2835,6 +2835,17 @@
                     <a href="#" class="recovery__link" data-popup="sign">Авторизоваться</a>
                 </div>
             </form>
+
+
+            <div data-popup="sms2">
+                попап1
+            </div>
+            <div data-popup="change-1">
+                попап2
+            </div>
+            <div data-popup="change-password">
+                попап3
+            </div>
             
           
 
